--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
          data-show-fps="false" data-show-log="false"
          data-show-fps-style="x:0,y:0,size:12,textColor:0xffffff,bgAlpha:0.9">
     </div>
+<script src="./vconsole.min.js"></script>
+<script>
+    // init vConsole
+    var vConsole = new VConsole();
+    console.log('VConsole Start');
+</script>
 <script>
     var loadScript = function (list, callback) {
         var loaded = 0;
